@@ -63,12 +63,17 @@ WI.LayerDetailsSidebarPanel = class LayerDetailsSidebarPanel extends WI.DetailsS
 
     selectNodeByLayerId(layerId)
     {
+        if (!this.parentSidebar)
+            return;
+
         let node = this._dataGridNodesByLayerId.get(layerId);
         if (node === this._dataGrid.selectedNode)
             return;
 
         const suppressEvent = true;
         if (node) {
+            this.parentSidebar.selectedSidebarPanel = this;
+            this.parentSidebar.collapsed = false;
             node.revealAndSelect(suppressEvent);
             this._showPopoverForSelectedNode();
         } else if (this._dataGrid.selectedNode)
