@@ -1,3 +1,14 @@
+2018-01-09  Ross Kirsling  <ross.kirsling@sony.com>
+
+        Web Inspector: Layers sidebar shows popover on selection even when collapsed
+        https://bugs.webkit.org/show_bug.cgi?id=181465
+
+        Reviewed by Matt Baker.
+
+        * UserInterface/Views/LayerDetailsSidebarPanel.js:
+        (WI.LayerDetailsSidebarPanel.prototype.selectNodeByLayerId):
+        Have sidebar show itself if necessary before displaying popover.
+
 2018-01-08  Joseph Pecoraro  <pecoraro@apple.com>
 
         Web Inspector: Find next / previous within a resource content view does not have bouncy highlight when editor scrolls
